<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start_text">Starting Test</string>
    <string name="action_320x240">320x240</string>
    <string name="action_640x360">640x360</string>
    <string name="action_640x480">640x480</string>
    <string name="stream_button">Stream</string>
    <string name="app_name">Schabuu</string>
    <string name="settings_button">SETTINGS</string>
    <string name="play_w_friends_button">PLAY WITH FRIENDS</string>
    <string name="play_alone_button">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="play_w_friends">PLAY WITH FRIENDS</string>
    <string name="play_alone">PLAY</string>
    <string name="player_name">Player Name</string>
    <string name="title_activity_gamesreen_activity_av">GamesreenActivityAV</string>
    <string name="title_activity_game_screen_guesser">GameScreenGuesser</string>
    <string name="action_settings">Change your Name</string>
    <string name="button_letter_q">Q</string>
    <string name="button_letter_w">w</string>
    <string name="button_letter_e">e</string>
    <string name="button_letter_r">R</string>
    <string name="button_letter_t">T</string>
    <string name="button_letter_z">Z</string>
    <string name="button_letter_u">U</string>
    <string name="button_letter_i">I</string>
    <string name="button_letter_o">O</string>
    <string name="button_letter_p">P</string>
    <string name="button_letter_ue">Ü</string>
    <string name="button_letter_a">A</string>
    <string name="button_letter_s">S</string>
    <string name="button_letter_d">D</string>
    <string name="button_letter_f">F</string>
    <string name="button_letter_g">G</string>
    <string name="button_letter_h">H</string>
    <string name="button_letter_j">J</string>
    <string name="button_letter_k">K</string>
    <string name="button_letter_l">L</string>
    <string name="button_letter_oe">Ö</string>
    <string name="button_letter_ae">Ä</string>
    <string name="button_letter_y">Y</string>
    <string name="button_letter_x">X</string>
    <string name="button_letter_c">C</string>
    <string name="button_letter_v">V</string>
    <string name="button_letter_b">B</string>
    <string name="button_letter_n">N</string>
    <string name="button_letter_m">M</string>
    <string name="button_renew">RENEW</string>
    <string name="button_delete">DELETE</string>
    <string name="title_activity_play_with_friends">PlayWithFriends</string>
    <string name="title_activity_play_alone">PlayAlone</string>
    <string name="title_activity_server_demo">ServerDemo</string>
    <string name="time_left">Time left</string>
    <string name="score_team2">Score 2</string>
    <string name="score_team1">Score 1</string>
    <string name="solution">Solution</string>
    <string name="word_1">word one</string>
    <string name="word_2">word two</string>
    <string name="word_3">word three</string>
    <string name="word_4">word four</string>
    <string name="word_5">word five</string>
    <string name="word_6">word six</string>
    <string name="play_alone_value">Play</string>
    <string name="play_with_friends_value">Play with Friends</string>
    <string name="settings_value">Settings</string>
    <string name="create_value">Create</string>
    <string name="join_value">Join</string>
    <string name="waiting_for_player">waiting</string>
    <string name="audio_description">Das Spiel wird geladen… Du bist in dieser Runde der Erklärbär. Versuche das Wort zu erklären ohne die angegebenen Wörter zu verwenden!</string>
    <string name="team_value">Du bist im Team </string>
    <string name="other_player">Other Player</string>
    <string name="video_description">Das Spiel wird geladen… Du bist in dieser Runde der Pantomime. Versuche das Wort durch Bewegungen vor der Kamera darzustellen! </string>
    <string name="guesser_description">Das Spiel wird geladen… Du darfst in dieser Runde das dargestellte und erklärte Wort raten!</string>
    <string name="save_settings_button">Save Settings</string>
    <string name="user_name_title">Set your name</string>
    <string name="user_name_msg">Please enter your displayed ingame-name</string>
    <string name="play_a">PLAY</string>
    <string name="play_alon">Play</string>
    <string name="title_activity_game_end">GameEnd</string>

    <string name="scoreOne" />
    <string name="scoreTwo" />
    <string name="Winner">Gewonnen hat</string>
    <string name="TeamWin" />
    <string name="buttonEnd">Beenden</string>
</resources>
