<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.beuth.s768078.example.duygu.myapplication.PlayAlone"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_weight="3.0"
    android:orientation="vertical">

    <TextView
        android:id="@+id/play_alone"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="@color/schabuu_green"
        android:text="@string/play_alon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:shadowColor="#333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:layout_weight="1"
        android:singleLine="false" />

    <TextView
        android:id="@+id/play_friends"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/schabuu_blue"
        android:text="@string/play_with_friends_value"
        android:shadowColor="#333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/schabuu_yellow"
        android:shadowColor="#333"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/settings_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff"
        android:layout_weight="1" />

</LinearLayout>