<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gamescreen_av"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:layout_weight="10.0"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/schabuu_blue"
        android:weightSum="1"
        android:id="@+id/loading_screen"
        android:longClickable="false"
        android:visibility="visible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75"
            android:weightSum="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.35"
                android:textColor="#ffffffff"
                android:textSize="32dp"
                android:textStyle="bold"
                android:gravity="center|center_horizontal" />

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.40" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_value"
            android:id="@+id/team_value"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:textStyle="bold"
            android:textColor="@color/schabuu_yellow"
            android:textSize="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/audio_icon"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="de.beuth_hochschule.Schabuu.ui.SurfacePlayerView"
        android:id="@+id/view_audio"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.03">

        <view
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            class="de.beuth_hochschule.Schabuu.ui.SurfacePlayerView"
            android:id="@+id/view" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="3"
        android:id="@+id/score_layout"
        android:longClickable="false"
        android:background="@color/schabuu_darkblue">

        <TextView
            android:id="@+id/score1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/schabuu_darkblue"
            android:gravity="center"
            android:text="@string/score_team1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/schabuu_green"
            android:text="@string/time_left"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/schabuu_darkblue"
            android:gravity="center"
            android:text="@string/score_team2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/loesungswort"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/solution"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_weight="0.81"
        android:background="@color/schabuu_darkgreen"
        android:textSize="36sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.0"
        android:background="@color/schabuu_darkblue">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:id="@+id/word_one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:textSize="20sp"
                android:layout_margin="2dp" />

            <TextView
                android:id="@+id/word_two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:textSize="20sp"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/word_three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:clickable="false"
                android:textSize="20sp"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            >

            <TextView
                android:id="@+id/word_four"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:textSize="20sp"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/word_five"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:textSize="20sp"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/word_six"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@color/schabuu_green"
                android:textSize="20sp"
                android:layout_margin="2dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>