<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/schabuu_blue"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.75"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guesser_description"
            android:id="@+id/guesser_description"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.35"
            android:textColor="#ffffffff"
            android:textSize="32dp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.40" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/team_value"
        android:id="@+id/team_value"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_player"
        android:id="@+id/player4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textColor="@color/schabuu_yellow"
        android:textSize="22dp" />

    <ImageView
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:id="@+id/imageView"
        android:src="@drawable/guesser_icon"
        android:layout_gravity="center_horizontal" />

</LinearLayout>